# claude-code-costguard

./: .env.example  .gitignore  CLAUDE.md  HEALTH_METRICS_STATUS.md  LICENSE  README.md  TESTING.md  TEST_AUDIT.md  TEST_SUITE.md  install.sh  run-tests.sh
.ai/: semantic-graph.contract.yaml
analytics/costguard-pulse/: Cargo.test.toml  Cargo.toml
analytics/costguard-pulse/src/: commits.rs  db.rs  hook.rs  main.rs  routing.rs  transcript.rs
analytics/costguard-pulse/tests/: integration.rs  unit_tests.rs
config/: settings-snippet.json
hooks/: subagent-cost-tracker.sh  test-hooks.sh  token-miser-route.sh
skills/budi-analytics/: SKILL.md
skills/session-miser/: SKILL.md
skills/token-miser/: SKILL.md
