[package]
name = "costguard-pulse"
version = "0.1.0"
edition = "2024"
description = "Claude Code session analytics — track tokens, costs, and efficiency"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.34", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
comfy-table = "7"
colored = "3"
dirs = "6"
anyhow = "1"
hostname = "0.4"
tokio = { version = "1", features = ["full"], optional = true }

[features]
default = []
daemon = ["tokio"]

[[bin]]
name = "costguard-pulse"
path = "src/main.rs"

[[bin]]
name = "costguard-pulse-hook"
path = "src/hook.rs"
